<resources>
    <string name="app_name" translatable="false">ServerController</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="ip">IP</string>
    <string name="port">Port</string>
    <string name="api_key">Api-key</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_connection">Add connection</string>
    <string name="ip_and_port">%1$s:%2$d</string>
    <string name="delete">Delete</string>
    <string name="selected">%1$d selected</string>
    <string name="invalid_port">Port is invalid</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_ip">Invalid IP</string>
    <string name="console">Console</string>
    <string name="servers">Servers</string>
    <string name="info">Information</string>
    <string name="servercontroller_version_header">ServerController Version</string>
    <string name="servercontroller_addons_header">ServerController Addons</string>
    <string name="servercontroller_version">Version: %1$s</string>
    <string name="servercontroller_api_version">Api-Version: %1$s</string>
    <string name="permissions">Permissions</string>
    <string name="addon_name">%1$s (%2$s)</string>
    <string name="authors">Authors: %1$s</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="restart">Restart</string>
    <string name="command">Command</string>
</resources>
