<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="8dp"
                                    card_view:cardCornerRadius="2dp"
                                    card_view:cardElevation="2dp">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_view_name"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_view_creator_info"
                    android:textSize="14sp"
                    android:layout_below="@id/text_view_name"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_view_server_info"
                    android:textSize="14sp"
                    android:layout_below="@id/text_view_creator_info"/>
        </RelativeLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/buttonBarStyle">

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:id="@+id/button_start"
                    style="?android:attr/buttonBarButtonStyle" />
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stop"
                    android:id="@+id/button_stop"
                    style="?android:attr/buttonBarButtonStyle" />

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restart"
                    android:id="@+id/button_restart"
                    style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>