<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:id="@+id/card_view_version">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_view_version_header"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:text="@string/servercontroller_version_header"
                            android:textColor="@color/black"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/text_view_version_header"
                            android:id="@+id/text_view_version"/>

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/text_view_api_version"
                            android:layout_below="@id/text_view_version"/>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card_view_version"
                    android:id="@+id/card_view_addons">

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:id="@+id/text_view_addons_header"
                            android:text="@string/servercontroller_addons_header"
                            android:textColor="@color/black"/>

                    <android.support.v7.widget.RecyclerView
                            android:layout_width="match_parent"
                            android:id="@+id/info_addon_recycler"
                            android:layout_below="@id/text_view_addons_header"
                            android:layout_height="wrap_content"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/card_view_permissions"
                    android:layout_below="@id/card_view_addons">

               <RelativeLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:layout_margin="10dp">

                   <TextView
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:textStyle="bold"
                           android:textSize="16sp"
                           android:text="@string/permissions"
                           android:textColor="@color/black"
                           android:id="@+id/text_view_permissions_header"/>
                   <android.support.v7.widget.RecyclerView
                           android:layout_width="match_parent"
                           android:layout_below="@id/text_view_permissions_header"
                           android:id="@+id/info_permissions_recycler"
                           android:layout_height="wrap_content"/>
               </RelativeLayout>

            </android.support.v7.widget.CardView>
        </RelativeLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>